--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,16 +1,16 @@
 .uneven {
     background-color: rgb(238, 133, 133);
-    font-family: Verdana;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 .font{
     font-size: 24px;
 }
-.second-element {
-    color: rgb(37, 95, 231);
+#second-element {
+    color: #0000ff;
     font-size: 36px;
 }
 
-.fourth-element {
+#fourth-element {
     background-color:rgb(59, 204, 110);
     font-size: 24px;
     font-weight:bold ;
