--- a/foundations/flex/01-flex-center/style.css
+++ b/foundations/flex/01-flex-center/style.css
@@ -3,10 +3,15 @@
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .box {
   background: palevioletred;
+  align-items: center;
+  justify-content: center;
   font-weight: bold;
   text-align: center;
   border: 6px solid maroon;
