--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,10 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 16px;
+  gap: 16px;
+
 }
 
 .icon {
@@ -33,7 +37,30 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
+
+.text {
+  margin-bottom: 16px;
+}
+
+.headline {
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.additional {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+}
+
+.buttonbox{
+  flex-grow: 0;
+}
+
 
 .close-button {
   background: #eee;
