--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,10 +5,57 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex: 1;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  font-family: Roboto, sans-serif;
+  padding: 8px;
+
+  
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  background-color: #eee;
+  padding: 8px;
+}
+
+
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  flex: 1;
 }
 
 img {
   width: 600px;
+}
+
+ul {
+  list-style-type: none;
+  display: flex; 
+  gap: 16px;
+  margin: 0;
+  padding: 0;
+}
+
+a { 
+  text-decoration: none;
+  font-family: Roboto, sans-serif;
+  font-size: 12px;
+  color: gray
+  
 }
 
 button {
@@ -16,6 +63,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px;
 }
 
 input {
